--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/public/mix-manifest.json
+#/public/mix-manifest.json
 
 
 # Created by https://www.gitignore.io/api/vim,node,linux,macos,windows,laravel,intellij,sublimetext,visualstudio,visualstudiocode,composer
