--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
-        "twbs/bootstrap": "5.1.3"
+        "twbs/bootstrap": "5.1.3",
+        "yajra/laravel-datatables-oracle": "^10.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
