--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "jquery": "^3.6.0",
         "waypoints": "^4.0.1"
     }
 }
