--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "bootstrap": "^5.1.3",
         "browser-sync": "^2.27.10",
         "browser-sync-webpack-plugin": "^2.3.0",
+        "jquery-ui": "^1.13.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
